# flymd

./: .gitignore  BUILD_ANDROID.md  README.en.md  README.md  andriod.md  arch.md  index.html  index.json  package-lock.json  package.json  plugin.md  schema2.json  test-drag.md  tmp_head.txt  tmp_mid.txt  tmp_snippet.txt  tmp_tail.txt  tmp_tail2.txt  tsconfig.json  vite.config.ts
.github/workflows/: android-build.yml  android.yml  build-windows.yml.bak  build.yml
public/: plugin-market.json
public/plugins/wordcount/: main.js  manifest.json
src/: decorate.ts  fileTree.ts  html2md.ts  main.ts  mobile.css  mobile.ts  platform-integration.ts  platform.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/extensions/: webdavSync.ts
src/uploader/: s3.ts
