[package]
name = "flymd"
version = "0.1.2"
description = "飞速 Markdown 编辑器"
authors = ["flymd"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true
